<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcd_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yg5d6@umsystem.edu">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
